# polynotes

./: .gitmodules  Cargo.toml  LICENSE  README.md  flake.nix  setup.cmd  setup.sh  todo.md
.cargo/: config.toml
core/: .gitmodules  Cargo.toml  build.rs
core/src/: bindings.rs  lib.rs  tests.rs
polynotes/: index.html  package-lock.json  package.json
polynotes/src/: App.css  App.tsx  store.ts  theme.ts  types.ts
polynotes/src-tauri/: Cargo.toml  tauri.conf.json
polynotes/src-tauri/icons/: icon.icns
polynotes/src-tauri/src/: benchmark.rs  lib.rs  main.rs
polynotes/src/pages/: HomePage.tsx  NotePage.tsx  SettingsPage.tsx
